# pyhacrf

./: .gitignore  .manylinux-install.sh  .travis.yml  MANIFEST.in  Makefile  README.rst  appveyor.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
examples/: readme_example.py
pyhacrf/: __init__.py  adjacent.pyx  algorithms.pyx  feature_extraction.py  log1p.h  pyhacrf.py  state_machine.py
pyhacrf/tests/: profile.py  test_features.py  test_model.py
